CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(facebookcpp)

SET(LIBFACEBOOKCPP_CURL_VERSION "curl-7.21.3")
SET(LIBFACEBOOKCPP_JSONCPP_VERSION "jsoncpp-src-0.5.0")

FIND_PACKAGE(curl)
IF(NOT CURL_FOUND)
	# If curl not found, build our own

	SET(CURL_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/external-lib/${LIBFACEBOOKCPP_CURL_VERSION}/include/)
	SET(CURL_LIBRARIES libcurl)

	SET(BUILD_CURL_EXE OFF)
	SET(BUILD_CURL_TESTS OFF)

	ADD_SUBDIRECTORY(external-lib/${LIBFACEBOOKCPP_CURL_VERSION})
ENDIF(NOT CURL_FOUND)

# TODO: Make sure do a find for jsoncpp first as well
SET(JSONCPP_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR}/external-lib/${LIBFACEBOOKCPP_JSONCPP_VERSION}/include/)
SET(JSONCPP_LIBRARIES jsoncpp)
ADD_SUBDIRECTORY(external-lib/${LIBFACEBOOKCPP_JSONCPP_VERSION})

ADD_SUBDIRECTORY(src)
ADD_SUBDIRECTORY(examples)