CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(LibFacebookCpp_DIR ${PROJECT_BINARY_DIR})
FIND_PACKAGE(LibFacebookCpp REQUIRED)

INCLUDE_DIRECTORIES(${LibFacebookCpp_INCLUDE_DIRS})

MESSAGE(STATUS ${LibFacebookCpp_INCLUDE_DIRS})

# XXX: HACK HACK HACK
IF(BUILD_SHARED_LIBS)
	ADD_DEFINITIONS(-DLIBFACEBOOKCPP_BUILD_DYNAMIC)
ENDIF()

ADD_EXECUTABLE(examples main.cpp)
TARGET_LINK_LIBRARIES(examples ${LibFacebookCpp_LIBRARIES})
